--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+            <version>1.18.22</version>
         </dependency>
         <dependency>
             <groupId>io.r2dbc</groupId>
