--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
   r2dbc:
-    password: ####
+    password: postgres
     url: r2dbc:pool:postgresql://localhost:5432/myDatabase
     username: postgres
